[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scenes/CameraController.gd" type="Script" id=1]
[ext_resource path="res://Environment/background_anim/background_anim1.png" type="Texture" id=2]
[ext_resource path="res://Environment/background_anim/background_anim2.png" type="Texture" id=3]
[ext_resource path="res://Environment/background_anim/background_anim3.png" type="Texture" id=4]
[ext_resource path="res://Environment/background_anim/background_anim4.png" type="Texture" id=5]
[ext_resource path="res://Environment/background_anim/background_anim6.png" type="Texture" id=6]
[ext_resource path="res://Environment/background_anim/background_anim9.png" type="Texture" id=7]
[ext_resource path="res://Environment/background_anim/background_anim12.png" type="Texture" id=8]
[ext_resource path="res://Environment/background_anim/background_anim5.png" type="Texture" id=9]
[ext_resource path="res://Environment/background_anim/background_anim8.png" type="Texture" id=10]
[ext_resource path="res://Environment/background_anim/background_anim10.png" type="Texture" id=11]
[ext_resource path="res://Environment/background_anim/background_anim11.png" type="Texture" id=12]
[ext_resource path="res://Environment/foreground_anim/foreground_anim1.png" type="Texture" id=13]
[ext_resource path="res://Environment/foreground_anim/foreground_anim2.png" type="Texture" id=14]
[ext_resource path="res://Environment/foreground_anim/foreground_anim3.png" type="Texture" id=15]
[ext_resource path="res://Environment/foreground_anim/foreground_anim4.png" type="Texture" id=16]
[ext_resource path="res://Environment/background_anim/background_anim7.png" type="Texture" id=17]
[ext_resource path="res://Environment/foreground_anim/foreground_anim12.png" type="Texture" id=18]
[ext_resource path="res://Environment/foreground_anim/foreground_anim8.png" type="Texture" id=19]
[ext_resource path="res://Environment/foreground_anim/foreground_anim6.png" type="Texture" id=20]
[ext_resource path="res://Environment/foreground_anim/foreground_anim5.png" type="Texture" id=21]
[ext_resource path="res://Environment/foreground_anim/foreground_anim7.png" type="Texture" id=22]
[ext_resource path="res://Environment/foreground_anim/foreground_anim9.png" type="Texture" id=23]
[ext_resource path="res://Environment/foreground_anim/foreground_anim10.png" type="Texture" id=24]
[ext_resource path="res://Environment/foreground_anim/foreground_anim11.png" type="Texture" id=25]
[ext_resource path="res://GFX/Particles/SandMiddleConfetti.tscn" type="PackedScene" id=26]
[ext_resource path="res://UI/Menus/PauseMenu.tscn" type="PackedScene" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 17 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 8 ) ],
"loop": true,
"name": "BackgroundAnimation",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512, 86.5612 )

[node name="Camera2D" type="Camera2D" groups=[
"Camera",
]]
current = true
script = ExtResource( 1 )

[node name="Sand" type="Area2D" parent="."]
position = Vector2( 55.0922, 288 )
z_index = 2
collision_layer = 16
collision_mask = 14
__meta__ = {
"_edit_group_": true
}

[node name="SlowZone" type="Area2D" parent="Sand"]
collision_layer = 16
collision_mask = 6

[node name="SlowZoneCollision" type="CollisionPolygon2D" parent="Sand/SlowZone"]
position = Vector2( 0, 29.9981 )
z_index = 2
polygon = PoolVector2Array( -533.628, -34.2889, -398.933, 3.12643, -240.291, -39.5271, 56.787, -77.6908, 152.57, 0.133209, 359.103, -25.3093, 564.14, 40.5418, 635.229, 19.5892, 701.829, 58.5012, 700.332, 169.251, -702.746, 169.999, -699.004, 6.86798, -643.629, -1.3634 )

[node name="Environment" type="Node2D" parent="Sand"]
modulate = Color( 0.87451, 0.996078, 1, 1 )
position = Vector2( 0, -324.822 )
scale = Vector2( 1.75, 1.75 )
__meta__ = {
"_edit_group_": true
}

[node name="BackgroundSand" type="AnimatedSprite" parent="Sand/Environment"]
z_index = -2
frames = SubResource( 1 )
animation = "BackgroundAnimation"
frame = 10
playing = true

[node name="ForegroundSand" type="AnimatedSprite" parent="Sand/Environment"]
z_index = 1
frames = SubResource( 2 )
frame = 7
playing = true

[node name="ColorRect" type="ColorRect" parent="Sand"]
visible = false
margin_left = -1000.0
margin_top = -40.0
margin_right = 1000.0
margin_bottom = 360.0
color = Color( 0.890196, 0.666667, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeletionZoneCollision" type="CollisionShape2D" parent="Sand"]
position = Vector2( 0, 192 )
shape = SubResource( 3 )

[node name="ParticleConfetti_Top" parent="." instance=ExtResource( 26 )]
position = Vector2( -2.26801, -507.464 )
scale = Vector2( 5, 4 )

[node name="ParticleConfetti_Bottom" parent="." instance=ExtResource( 26 )]
position = Vector2( -17.4042, 210.662 )
scale = Vector2( 5, 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 27 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
[connection signal="body_entered" from="Sand" to="." method="_on_Sand_body_entered"]
[connection signal="body_entered" from="Sand/SlowZone" to="." method="_on_SlowZone_body_entered"]
[connection signal="body_exited" from="Sand/SlowZone" to="." method="_on_SlowZone_body_exited"]
